--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -22,7 +22,7 @@
   FRA_Cucked_Britain:0 "Britain Has Been Defeated"
   FRA_Peace_With_Britain:0 "A Peace With Honour Has Been Signed With Britain"
   FRA_Post_Expansion_Limit:0 "\n§W--------------------------------§!\nThis focus is considered expansionist and will incur a penalty of §R-5%§! war support and §R-5%§! stability."
-  autonomy_PB_SP_Client_State_tt:0 "Alemania will receive a §YUnique§! SP puppet status\n"
+  autonomy_PB_SP_Client_State_tt:0 "Alemannia will receive a §YUnique§! SP puppet status\n"
 
   ##########################
   # Leader General And Admiral Descriptions
@@ -451,8 +451,8 @@
   French.49.a:0 "Remnants of the past best left forgotten."
 
   French.50.t:0 "French Labour Demands"
-  French.50.d:0 ""
-  French.50.a:0 "We have no choice"
+  French.50.d:0 "This morning, the French officials present in our territory have received orders from Paris to begin the immediate extradition of over fifteen thousand German workers in our prisons to France for forced labour. Many German soldiers and POWs find themselves without opportunity for work in an exhausted, manpower-inflated German economy, and those will compose the large bulk of the first wave of extradited workers, along with many selected political activists and intellectuals targeted by the French SP. And this is not expected to be the last wave; Paris seems intent on importing cheap German workforce to reconstruct their own post-war economy, as well as root out sources of potential unrest in their occupied territories for the near future. Already, military prisons and camps all across Germany are being emptied as workers are forcibly displaced from their homes and families to travel towards many labour camps in France, whose locations are kept confidential. While there are enough potential workers in the regime’s prisons to fulfill this first quota appropriately, French authorities might have to resort to displacing any poor German citizen in the streets to keep up with Paris’s demands in the future. Furthermore, while this is expected to ease the administrative burdens of the occupation regime somewhat, the already unhappy German populace are sure to begrudge French rule even further, as their loved ones are forcibly carried away across the Ardennes never to be seen again."
+  French.50.a:0 "Thus are the spoils of war"
 
   French.51.t:0 "German Conscript Workers Arrive"
   French.51.d:0 ""
@@ -1450,7 +1450,7 @@
   PB_FRA_Everything_But_Tyrol:0 "Everything But Tyrol"
   PB_FRA_Reinstate_Hallgren:0 "Reinstate Hallgren"
   PB_FRA_Talk_With_Engdahl:0 "Talk With Engdahl"
-  PB_FRA_Transfer_Holestein_To_Alemania:0 "Transfer Holstein To Alemania"
+  PB_FRA_Transfer_Holestein_To_Alemania:0 "Transfer Holstein To Alemannia"
   PB_FRA_Seize_Holestein_For_Ourselves:0 "Seize Holestein For Ourselves"
   PB_FRA_Take_The_Damn_Islands:0 "Take The Damn Islands"
   PB_FRA_Invade_The_Danish_Government_In_Exile:0 "Invade The Danish Government In Exile"
@@ -1587,7 +1587,7 @@
   PB_FRA_The_Apurdi_Situation:0 "The Apurdi Situation"
 
   PB_FRA_the_new_european_system:0 "The New European System"
-  PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\n"
+  PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\nWith much of Europe now under our thumb the time to rebuild has come. Whilst these lands may have once belonged to our enemies we must convince these now occupied people that we are their liberators, not their enemies. Funding from France's own pocket will aid in these proposed development programs and hopefully we can restore much of the destroyed or damaged infrastructure that the war caused."
   PB_FRA_the_land_of_albion:0 "The Land of Albion"
   PB_FRA_invest_in_england:0 "Invest in England"
   PB_FRA_invest_in_wales:0 "Invest in Wales"
@@ -1694,11 +1694,11 @@
 
   PB_FRA_France_Rule_The_Waves_tt:0 "§YBrute Force Policy and Renewed Naval Policy§! will be merged into one idea"
  
-  PB_FRA_Collaborator_Britain_tt:0 "Region specific decisions for §YCollaborators§! in Britain will unlock"
-  PB_FRA_Collaborator_Nuremberg_tt:0 "Region specific decisions for §YCollaborators§! in Germany will unlock"
-  PB_FRA_Collaborator_Italy_tt:0 "Region specific decisions for §YCollaborators§! in Italy will unlock"
-  PB_FRA_Collaborator_Scandinavia_tt:0 "Region specific decisions for §YCollaborators§! in Scandinavia will unlock"
-  PB_FRA_Collaborator_Charles_de_Gaulle_tt:0 "Charles de Gaulle will be placed as the §YRoyaume Dictent§! of Cornwall"
+  PB_FRA_Collaborator_Britain_tt:0 "Region specific decisions £decision_icon_small for §YCollaborators§! and §YAllies§! in Britain will unlock"
+  PB_FRA_Collaborator_Nuremberg_tt:0 "Region specific decisions £decision_icon_small for §YCollaborators§! and §YAllies§! in Germany will unlock"
+  PB_FRA_Collaborator_Italy_tt:0 "Region specific decisions £decision_icon_small for §YCollaborators§! and §YAllies§! in Italy will unlock"
+  PB_FRA_Collaborator_Scandinavia_tt:0 "Region specific decisions £decision_icon_small for §YCollaborators§! and §YAllies§! in Scandinavia will unlock"
+  PB_FRA_Collaborator_Charles_de_Gaulle_tt:0 "Charles de Gaulle will be placed as the §YRoyaume Dictent§! and §YAllies§! of Cornwall"
   PB_FRA_HAN_SP:0 "The §YSP§! will be very pleased with this arrangement"
   PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
   PB_FRA_Greater_France_tt:0 "\n§RUnavailable At Current Release:§!\nDepending on your victory circumstances a new focus tree will load"
@@ -2038,22 +2038,22 @@
   SWE_FRA_Puppet_cn_ADJ:0 "Swedish"
   SWE_FRA_Puppet_an_ADJ:0 "Swedish"
 
-  NOR_FRA_Puppet_ni:0 "Occupied Norway"
-  NOR_FRA_Puppet_ni_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_ds:0 "Occupied Norway"
-  NOR_FRA_Puppet_ds_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_rc:0 "Occupied Norway"
-  NOR_FRA_Puppet_rc_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_an:0 "Occupied Norway"
-  NOR_FRA_Puppet_an_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_cn:0 "Occupied Norway"
-  NOR_FRA_Puppet_cn_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_lb:0 "Occupied Norway"
-  NOR_FRA_Puppet_lb_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_ss:0 "Occupied Norway"
-  NOR_FRA_Puppet_ss_DEF:0 "Occupied Norway"
-  NOR_FRA_Puppet_jc:0 "Occupied Norway"
-  NOR_FRA_Puppet_jc_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_ni:0 "Free Norway"
+  NOR_FRA_Puppet_ni_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_ds:0 "Free Norway"
+  NOR_FRA_Puppet_ds_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_rc:0 "Free Norway"
+  NOR_FRA_Puppet_rc_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_an:0 "Free Norway"
+  NOR_FRA_Puppet_an_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_cn:0 "Free Norway"
+  NOR_FRA_Puppet_cn_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_lb:0 "Free Norway"
+  NOR_FRA_Puppet_lb_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_ss:0 "Free Norway"
+  NOR_FRA_Puppet_ss_DEF:0 "Free Norway"
+  NOR_FRA_Puppet_jc:0 "Free Norway"
+  NOR_FRA_Puppet_jc_DEF:0 "Free Norway"
   NOR_FRA_Puppet_ni_ADJ:0 "Norwegian"
   NOR_FRA_Puppet_rc_ADJ:0 "Norwegian"
   NOR_FRA_Puppet_lb_ADJ:0 "Norwegian"
