--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -3842,22 +3842,22 @@ SAN_an_ADJ:0 "Indian"
  SAX_cn_ADJ:0 "Saxon"
  SAX_an_ADJ:0 "Saxon"
 
- HAN_ni:0 "Alemania"
- HAN_ni_DEF:0 "Alemania"
- HAN_ds:0 "Alemania"
- HAN_ds_DEF:0 "Alemania"
- HAN_rc:0 "Alemania"
- HAN_rc_DEF:0 "Alemania"
- HAN_an:0 "Alemania"
- HAN_an_DEF:0 "Alemania"
- HAN_cn:0 "Alemania"
- HAN_cn_DEF:0 "Alemania"
- HAN_lb:0 "Alemania"
- HAN_lb_DEF:0 "SP Alemania"
- HAN_ss:0 "Alemania"
- HAN_ss_DEF:0 "Alemania"
- HAN_jc:0 "Alemania"
- HAN_jc_DEF:0 "Alemania"
+ HAN_ni:0 "Alemannia"
+ HAN_ni_DEF:0 "Alemannia"
+ HAN_ds:0 "Alemannia"
+ HAN_ds_DEF:0 "Alemannia"
+ HAN_rc:0 "Alemannia"
+ HAN_rc_DEF:0 "Alemannia"
+ HAN_an:0 "Alemannia"
+ HAN_an_DEF:0 "Alemannia"
+ HAN_cn:0 "Alemannia"
+ HAN_cn_DEF:0 "Alemannia"
+ HAN_lb:0 "Alemannia"
+ HAN_lb_DEF:0 "Alemannia"
+ HAN_ss:0 "Alemannia"
+ HAN_ss_DEF:0 "Alemannia"
+ HAN_jc:0 "Alemannia"
+ HAN_jc_DEF:0 "Alemannia"
  HAN_ni_ADJ:0 "French-Hannoverian"
  HAN_rc_ADJ:0 "French-Hannoverian"
  HAN_lb_ADJ:0 "French-Hannoverian"
@@ -3867,7 +3867,7 @@ SAN_an_ADJ:0 "Indian"
  HAN_cn_ADJ:0 "French-Hannoverian"
  HAN_an_ADJ:0 "French-Hannoverian"
  
- HAN_SP:0 "Alemania"
+ HAN_SP:0 "Alemannia"
  HAN_SP_DEF:0 "La Sécurité Publique Etat Alemania"
  
 
