--- a/localisation/PB_autonomy_l_english.yml
+++ b/localisation/PB_autonomy_l_english.yml
@@ -24,5 +24,7 @@
 
  autonomy_PB_SP_Client_State:0 "SP Client State"
 
+ autonomy_PB_Garrison_State:0 "Garrison State"
+
  PB_can_raise_autonomy_level:0 "Can Raise Autonomy Level"
  PB_can_lose_autonomy_level:0 "Can Lower Autonomy Level"
