--- a/localisation/PB_Technologies_l_english.yml
+++ b/localisation/PB_Technologies_l_english.yml
@@ -171,15 +171,30 @@
  tech_automat_great_war:0 "Great War Automat"
  tech_automat_light_1:0 "Duopod I"
  tech_automat_light_1_upgrade_1:0 "Reconstituted Gearbox"
+ tech_automat_light_1_upgrade_2:0 "Onboard Fire Suppressors"
 
  tech_automat_light_2:0 "Duopod II"
+ tech_automat_light_2_upgrade_1:0 "Improved Targeting Optics"
+ tech_automat_light_2_upgrade_2:0 "Engine Overclocking Protocols"
 
  tech_automat_light_3:0 "Duopod III"
 
  tech_automat_medium_1:0 "Tripod I"
+
  tech_automat_medium_2:0 "Tripod II"
+ tech_automat_medium_2_upgrade_1:0 "Dominance Horn"
+ tech_automat_medium_2_upgrade_2:0 "Heat-Ray Prismatic Accelerators"
+
  tech_automat_medium_3:0 "Tripod III"
+ tech_automat_medium_2_upgrade_3:0 "Integrated Radium Optics"
+ tech_automat_medium_2_upgrade_4:0 "Expanded Ration Storage Pods"
 
  tech_automat_heavy_1:0 "Quadropod I"
+ tech_automat_heavy_1_upgrade_1:0 "Repair Kit Standardization"
+ tech_automat_heavy_1_upgrade_2:0 "Onboard Coffee and Tea Maker"
+
  tech_automat_heavy_2:0 "Quadropod II"
+ tech_automat_heavy_1_upgrade_3:0 "Telescreen Relay Targeting"
+ tech_automat_heavy_1_upgrade_4:0 "Low Intensity Heat Ray Emitter"
+
  tech_automat_heavy_3:0 "Quadropod III"
