--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -174,6 +174,14 @@
  gw_automat_2:0 "Light Duopod II"
  gw_automat_3:0 "Light Duopod III"
 
+ tripod_automat_0:0 "Tripod I"
+ tripod_automat_1:0 "Tripod II"
+ tripod_automat_2:0 "Tripod III"
+
+ quadropod_automat_0:0 "Quadropod I"
+ quadropod_automat_1:0 "Quadropod II"
+ quadropod_automat_2:0 "Quadropod III"
+
  ENG_infantry_equipment_0:0 "Standard Infantry Rifle 1918 Pattern"
  ENG_infantry_equipment_0_short:0 "S.I.R Pattern 1918"
 
