--- a/localisation/unit_l_english.yml
+++ b/localisation/unit_l_english.yml
@@ -397,6 +397,10 @@ light_armor:0 "Light Landship"
 light_armor_desc:0 ""
 gw_basic_automat:0 "Duopod"
 gw_basic_automat_desc:0 ""
+tripod_automat:0 "Tripod"
+tripod_automat_desc:0 ""
+quadropod_automat:0 "Quadropod"
+quadropod_automat_desc:0 ""
 logistics_company:0 "Logistics Company"
 logistics_company_desc:0 ""
 maintenance_company:0 "Maintenance Company"
