--- a/localisation/PB_factions_l_english.yml
+++ b/localisation/PB_factions_l_english.yml
@@ -37,3 +37,6 @@
 
   FACTION_NORTHERN_COMMITTEE:0 "§YMember of the Northern Defense Committee§!"
   FACTION_NORTHERN_COMMITTEE_LONG:0 "This nation is a member of the §YNorthern Defense Committee§!, a military alliance formed between the Kingdom of Sweden and the newly independent Finland in 1924. Essentially just a pact to deter Russian adventurism in Finland, the Northern Defense Committee has limited ties with Norway and Denmark, though the two are not officially protected by it. With Sweden's historic neutrality broken by their support of the Finns, the NDC is likely just the beginning of Sweden's opening to the larger world."
+
+  FACTION_HAMBURG_LEAGUE:0 "§YMember of the Hamburg League§!"
+  FACTION_HAMBURG_LEAGUE_LONG:0 "This nation is a member of the §YHamburg League§!, a military alliance formed between by the United Kingdoms of Germany with the goal of protecting stability and democracy in Europe. Essentially a front to counter French Expansionism and Russian adventurism, where minor nations can receive protection and support from Frankfurt. The alliance is closely in contact with Great Britian and is maybe the first step to European Unity."
