More British Focus Tree Work

--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -328,4 +328,24 @@
  amphibious_mechanized_equipment_2:0 "Improved Amphibious Tractor"
  amphibious_mechanized_equipment_2_short:0 "Improved Amtrac"
  amphibious_mechanized_equipment_2_desc:0 "These Amtracs feature several improvements over the base version, such as a rear loading ramp for easier unloading on the beach."
- 
+
+ CAS_equipment:0 "TVAC"
+ CAS_equipment_2:0 "TVAC I"
+ CAS_equipment_2_desc:0 ""
+ CAS_equipment_3:0 "TVAC II"
+ CAS_equipment_3_desc:0 ""
+
+ fighter_equipment_2:0 "SSC I"
+ fighter_equipment_3:0 "SSC II"
+
+ nav_bomber_equipment_2:0 "SSC-N I"
+ nav_bomber_equipment_3:0 "SSC-N II"
+
+ heavy_fighter_equipment_2:0 "HVAC I"
+ heavy_fighter_equipment_3:0 "HVAC II"
+
+ tac_bomber_equipment_2:0 "ScramJet I"
+ tac_bomber_equipment_3:0 "ScramJet II"
+
+ strat_bomber_equipment_2:0 "Rockefeller I"
+ strat_bomber_equipment_3:0 "Rockefeller II"
