--- a/localisation/music_station_l_english.yml
+++ b/localisation/music_station_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- PB_Synth_TITLE:0 "Electric Organ Tunes"
+ PB_Synth_TITLE:0 "Electric Organ Tunes - Sponsored by Edison Imperial Electric"
  Moonlight_Sonata_1:0 "Moonlight Sonata | 1st Movement"
  Piano_Sonata_8:0 "Piano Sonata No.8 | 2nd Movement"
  Clair_de_Lune:0 "Clair de Lune | Modular Reflection"
@@ -17,3 +17,9 @@
  Millenial_Rage:0 "Mechanicus | Millenial Rage"
  Warriors_of_Mars:0 "Mechanicus | Warriors of Mars"
  Blade_Runner_Blues:0 "Vangelis | Blade Runner Blues"
+
+ PB_Oldies_TITLE:0 "Imperial Broadcasting System - Classics"
+ All_American_Girl:0 "All-American Girl | George Olsen"
+ Change_my_tune:0 "I Guess I'll Have To Change My Plan | Layton & Johnstone"
+ My_Foolish_Heart:0 "My Foolish Heart | Jane Morgan"
+ This_Time_Its_Real:0 "This Time It’s Real | Horace Heidt"
