--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -722,3 +722,4 @@
  VICTORY_POINTS_11910:0 "Marsa"
  VICTORY_POINTS_10127:0 "South Marsa"
  VICTORY_POINTS_1071:0 "East Marsa"
+ VICTORY_POINTS_7166:0 "Bejai"
