--- a/localisation/PB_Technologies_l_english.yml
+++ b/localisation/PB_Technologies_l_english.yml
@@ -198,3 +198,10 @@
  tech_automat_heavy_1_upgrade_4:0 "Low Intensity Heat Ray Emitter"
 
  tech_automat_heavy_3:0 "Quadropod III"
+
+ CAS2:0 "TVAC I"
+ CAS3:0 "TVAC II"
+
+ air_teleforce_engine:0 "Teleforce Engine"
+ jet_engines:0 "Intra-Sonic Uranium Engine"
+ jet_engines_desc:0 "Developed using cutting age science, Uranium Tele-Atomic Engines combine the kinetic thrust of a teleforce engine with the versatility of atomic power. With testing showing acceptable rates of cancer development in aeronauts, Tele-Atomic Engines will give a clear edge in aerial combat, while the warmth of nuclear power deters high altitude hypothermia"
