--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -5,16 +5,42 @@
   #BODY AUG MECHANIC
   ##########################
   PB_RUS_Body_Augmentation:0 "The New Russian"
-  PB_RUS_Body_Augmentation_desc:0 "\n\n\n\n\n\nMan has always been constrained to the rules of nature. Today we break such rules as new revolutionary technologies allow us to modify our bodies in ways never thought imaginable.\n\n§YSelect a button from the gui below and choose a specific augmentation of your liking, higher end buffs will cost more surgical experience.§!\n\nYour current amount of surgical experience is:  §Y[?RUS_Surgical_Experience_Var]§! £RUS_Surgical_Expertise"
+  PB_RUS_Body_Augmentation_desc:0 "\n\n\n\n\n\nMan has always been constrained to the rules of nature. Today we break such rules as new revolutionary technologies allow us to modify our bodies in ways never thought imaginable.\n\n§YSelect a button from the gui below and choose a specific augmentation of your liking, higher end buffs will cost more surgical experience.§!\n\n§RAugmentations are one time changes that can't be reverted so pick carefully!§!\n\nYour current amount of surgical experience is:  §Y[?RUS_Surgical_Experience_Var]§! £RUS_Surgical_Expertise\n"
   Human_Aug_bt_Nothing_Selected_tt:0 "Empty"
   Human_Aug_bt_Nothing_Selected_tt_delayed:0 "No augmentation has been selected"
   PB_RUS_Conduct_Experimental_Surgeries:0 "Conduct Experimental Surgeries"
-  add_RUS_Surgical_Experience_Var:0 "Surgical Experience £RUS_Surgical_Expertise §G+2§!\n\n§gThis decision will reappear in 90 days§!"
+  add_RUS_Surgical_Experience_Var:0 "Surgical Expertise: §G+2§!\n\n§gThis decision will reappear in 90 days§!"
+  decision_cost_12_Surgical_Experience:0 "£RUS_Surgical_Expertise 12"
+  decision_cost_12_Surgical_Experience_blocked:0 "£RUS_Surgical_Expertise 12"
+  remove_RUS_Surgical_Experience_Var_12:0 "Surgical Expertise: §R-2§!"
+  decision_cost_5_Surgical_Experience:0 "£RUS_Surgical_Expertise 6"
+  decision_cost_5_Surgical_Experience_blocked:0 "£RUS_Surgical_Expertise 6"
+  remove_RUS_Surgical_Experience_Var_6:0 "Surgical Expertise: §R-6§!"
+
   PB_RUS_The_Brain:0 "The Brain"
+
   PB_RUS_The_Heart:0 "The Heart"
-  PB_RUS_The_Lungs:0 "The Lungs"
+
   PB_RUS_The_Kidneys:0 "The Kidneys"
+
   PB_RUS_The_Intestines:0 "The Intestines"
+  PB_RUS_Iron_Gut:0 "Iron Gut"
+  Human_Aug_bt_Iron_Gut_Unlocked:0 "Intestine Augmentation: §CIron Gut§!\n    Effect: Division Recovery Rate: §G+5.00%§!"
+
+  PB_RUS_The_Lungs:0 "The Lungs"
+  PB_RUS_Expanded_Lungs:0 "Expanded Lungs"
+  PB_RUS_Expanded_Lungs_desc:0 "Altering the genome responsible for maintaining healthy organ sizes and functions to be more 'allowing' of abnormal organ sizes, specifically the Lungs, can allow engineered soldiers to run for longer durations."
+  Human_Aug_bt_Expanded_Lungs_tt:0 "Expanded Lungs"
+  Human_Aug_bt_Expanded_Lungs_tt_delayed:0 "Divisions speed: §G+5.00%§!"
+  Human_Aug_bt_Expanded_Lungs_Unlocked:0 "Lung Augmentation: §CExpanded Lungs§!\n    Effect: Divisions speed: §G+5.00%§!"
+  PB_RUS_Water_Conditioned_Aioli:0 "Water Conditioned Aioli"
+  PB_RUS_Water_Conditioned_Aioli_desc:0 "Stressing the Lungs Aioli for long periods of time under sustained pressure and chemical solutions can help expand and reinforce the bodies ability to breath under water for an additional two hours."
+  Human_Aug_bt_Water_Conditioned_Aioli_tt:0 "Water Conditioned Aioli"
+  Human_Aug_bt_Water_Conditioned_Aioli_tt_delayed:0 "Amphibious Invasion Speed: §G+25.00%§!"
+  Human_Aug_bt_Water_Conditioned_Aioli_Unlocked:0 "Lung Augmentation: §CWater Conditioned Aioli§!\n    Effect: Amphibious Invasion Speed: §G+25.00%§!"
+
+
+
 
 
 
@@ -582,6 +608,7 @@
   PB_RUS_Imperialism_Born_Anew:0 "Imperialism Born Anew"
   PB_RUS_Imperialism_Born_Anew_desc:0 ""
 
+  PB_RUS_Redefining_Mankind:0 "Redefining Mankind"
   PB_RUS_The_Imperial_Army:0 "The Imperial Army"
   PB_RUS_Armored_Warfare:0 "Armored Warfare"
   PB_RUS_The_New_Hussars:0 "The New Hussars"
