Fix to British loc

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -608,6 +608,21 @@
   PBNews.155.d:0 "Following France's rearmament and Russia's change of course, the German Government led by Ernst Thalmann has proclaimed to create an Europaen Defense Front to safeguard all independent nations in Europe against violent expansionism. This new diplomatic adventure suprises the people of Europe as the United Kingdoms of Germany has only extented its influence over Europe with great reluctance till now. But it seems like that new Germany truly has the ambition to grant itself the role of protector of Europe. The new alliance will be called the 'Hamburg League' and it also promises to help advance development for all it's members."
   PBNews.155.a:0 "Can Germany even protect itself?"
 
+  PBNews.156.t:0 "EASTERN CRISIS"
+  PBNews.156.d:0 "Though Victory was achieved in Europe, the collapse of the Russian Empire has brought unintended consequences. With supply lines in shambles, much of the former Imperial territories have fallen into total disarray, with League administrators scrambling to keep the peace. The anarchy engulfing the East has most acutely affected the food situation, with the League peacekeepers forced to gradually distribute what remains of wartime food stockpiles.\n\nThe Eastern Crisis, as it has begun to be called, is already shaping up to be one of the worst humanitarian crises in recent human history."
+  PBNews.156.a:0 "The League faces its' first real challenge"
+
+  PBNews.157.t:0 "RUSSIAN EXPLUSIONS"
+  PBNews.157.d:0 "Concerning news emerged from Eastern Europe as millions of Russian settlers have been forcibly expelled from Poland, the Baltics and Ukraine. Despite the best efforts of League administrators, many towns and cities have taken it upon themselves to harass and attack Russian settler communities left behind by the collapse of Moscow's authority.\n\nReprisal killings across Poland and Ukraine have become distressingly common as Anglo-German forces attempt to keep the peace. Across Eastern Europe, millions of Russian refugees have begun to stream into Germany and the Balkans."
+  PBNews.157.a:0 "Wait, didn't we just fight to stop things like this?"
+
+  PBNews.158.t:0 "UKRAINE IN FLAMES"
+  PBNews.158.d:0 "With the famine in Eastern Europe continuing to escalate, the Ukrainian Interim Unity Government faces catastrophe. The Partisan Council, formed by the League as a provisional government, has collapsed following the assassination of moderate leader Lazar Kaganovich. Both Bandera and Makhno have blamed each other for the attack, escalating into open conflict between nationalist and anarchist militias.\n\nLeague forces in the Ukraine have condemned both sides and begun efforts to establish a new unity government and impose order."
+  PBNews.158.a:0 "Can the League really save Eastern Europe from itself?"
+
+  PBNews.159.t:0 "UKRAINIAN POLICE ACTION"
+  PBNews.159.d:0 "As diplomatic channels failed to resolve the Ukrainian Crisis, the League of Nations Executive Committee passed a resolution permitting a military intervention in Ukraine. The situation has proven to be one of the first immediate challenges to the new international order and some claimed Ukraine would be the death of the organization. As International forces cross into the conflict zone, it seems that the League has challenged those ideas.\n\nBoth Bandera and Makhno have condemned the intervention, vowing to repel the international expeditionary force by any means necessary."
+  PBNews.159.a:0 "We'll show them our peaceful ways, by force!"
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
