--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -484,8 +484,8 @@
   French.57.a:0 "Lets Get To Work Then"
 
   French.58.t:0 "The Eternal State"
-  French.58.d:0 ""
-  French.58.a:0 "France Will Live For A Thousand Years More"
+  French.58.d:0 "As clocks throughout France chimed 12 o’clock in the afternoon a silence fell in the state.When the last bell made its final sound, everyone turned on the radio.The French president was about to hold his immortalizing speech, this one would go down in the history books.\n\nToday I speak to you all with great pleasure, as France has reached a new era. Our revolutions have finally reached their goal and served us well but now it is time to endorse our new selves and celebrate profusely. And now to loosley.\n\nQuote my great colleague, Louis Aragon. With one of his works as I believe you shall enjoy it.\n\nWhat cares the exile if the colors be false. One would swear it was us if he saw one. Were willing to believe in apparitions. I hear the prelude of the marching in the pit.\n\nIt’s the Opera of our beliefs and winnings. But it was only the beginnings.Those balconies ablaze those bronze roofs. All of our actions now proofs.\n\nWe are capable and shall not enter a state of demise.I am your dancer leading us while swinging a tambourine.And now no longer a dream.I have awakened and rubbed my eyes.\n\nAnd see the new France we have created collectively.I must say respectively. We are exiles no more.Unified now under culture and ethnicity just like a time before.I dreamt of a France like this during night, day and boredom.Celebration is now our duty just like it is to protect our new state.\n\nSo now let us celebrate!"
+  French.58.a:0 "Vive La France!"
 
   French.59.t:0 "Year Zero"
   French.59.d:0 ""
