the launcher makes me die

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -358,7 +358,7 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Goering_Air_Doctrine:0 "Goering's Air Support Doctrine"
   PB_GER_Goering_Air_Doctrine_Filipino_Lessons:0 "Lessons of the Filipino Insurrection"
   PB_GER_Goering_Air_Doctrine_Fighter_Models:0 "Finalize New Fighter Models"
-  PB_GER_Goering_Air_Doctrine_Bomber_Models:0 "Modernize the Bomber Force"
+  PB_GER_Goering_Air_Doctrine_Bomber_Models:0 "CAS Funding"
   PB_GER_Goering_Air_Doctrine_Bomber_Doctrines:0 "How to attack from the Sky"
   PB_GER_Goering_Air_Doctrine_Rhine_Wall:0 "The Rhine Wall"
   PB_GER_Goering_Air_Doctrine_Future_War:0 "The Way of the Future"
