Important Stuff for the Philippines
- ideas
- gfx
- locals
- map stuff

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -335,6 +335,7 @@
  VICTORY_POINTS_1415:0 "San Carlos"
  VICTORY_POINTS_4241:0 "Schlieffenshaven"
  VICTORY_POINTS_4288:0 "Calapan"
+ VICTORY_POINTS_4228:0 "Legaspi"
  VICTORY_POINTS_12118:0 "Cebu"
  VICTORY_POINTS_12213:0 "Aparri"
  VICTORY_POINTS_7381:0 "Batavia"
