--- a/localisation/PB_Generic_Ideas_l_english.yml
+++ b/localisation/PB_Generic_Ideas_l_english.yml
@@ -9,3 +9,4 @@
   PB_Outback_Country:0 "Outback Country"
   PB_Cowboy_Country:0 "Untamed Country"
   PB_Idea_VIN_Rebellion:0 "The War of Independence"
+  PB_Idea_PHI_Rebellion:0 "The War of Liberation"
