--- a/localisation/PB_peace_popup_l_english.yml
+++ b/localisation/PB_peace_popup_l_english.yml
@@ -27,6 +27,8 @@
  PB_PEACE_POPUP_WAR_CONCLUSION_ENG_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from Ireland, securing full Irish independence."
  PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_LEAGUE:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
  PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_PACT:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
+ PB_PEACE_POPUP_WAR_CONCLUSION_DAS_PHI_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from the Philippines, ending the decades long war for independence"
+ PB_PEACE_POPUP_WAR_CONCLUSION_PHI_DAS_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]and pacified the islands. For now."
 
  #Capitulation (war continuing) events
 
@@ -72,7 +74,11 @@
  PB_PEACE_POPUP_FLAVOR_SCA_Victory:0 "The North American Continent is painted a little more red"
  PB_PEACE_POPUP_FLAVOR_SCA_Loss:0 "The American "Utopia" lives no more"
 
+ PB_PEACE_POPUP_WAR_CONCLUSION_PHI_DAS_Victory_Flavor:0 "Even if my country does seem to have forgotten me, I have always thought about it."
+ PB_PEACE_POPUP_WAR_CONCLUSION_DAS_PHI_Victory_Flavor:0 "When the people reach that height, God will provide a weapon, the idols will be shattered, and tyranny will crumble like a house of cards"
+
  PB_PEACE_POPUP_FLAVOR_WT_Low:0 "The Long Peace begins to crumble"
  PB_PEACE_POPUP_FLAVOR_WT_Mod:0 "The Drums of War grow louder"
  PB_PEACE_POPUP_FLAVOR_WT_High:0 "Peace is now but a fleeting memory"
  PB_PEACE_POPUP_FLAVOR_WT_VHigh:0 "The lamps are going out all over the World"
+
