Upgrades People, Upgrades
 a lot of small stuff honestly

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -723,4 +723,6 @@
  VICTORY_POINTS_11910:0 "Marsa"
  VICTORY_POINTS_10127:0 "South Marsa"
  VICTORY_POINTS_1071:0 "East Marsa"
- VICTORY_POINTS_7166:0 "Bejai"
+ VICTORY_POINTS_4046:0 "Bejai"
+ VICTORY_POINTS_1141:0 "Tebessa"
+ VICTORY_POINTS_7065:0 "Constantine"
