Victory Points and Bufixes oh boi

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -684,7 +684,7 @@
  VICTORY_POINTS_10582:0 "Salt Lake City"
  VICTORY_POINTS_12721:0 "Ciudad Victoria"
  VICTORY_POINTS_9637:0 "Monterrey de California"
- VICTORY_POINTS_11905:0 "Gümülcine"
+ VICTORY_POINTS_11905:0 "Dedeagatsch"
  VICTORY_POINTS_10535:0 "Boomtown"
  VICTORY_POINTS_9909:0 "Nice"
  VICTORY_POINTS_575:0 "Dunkirk"
@@ -726,3 +726,16 @@
  VICTORY_POINTS_4046:0 "Bejai"
  VICTORY_POINTS_1141:0 "Tebessa"
  VICTORY_POINTS_7065:0 "Constantine"
+ VICTORY_POINTS_1056:0 "Homs"
+ VICTORY_POINTS_3942:0 "Deir az-Zur"
+ VICTORY_POINTS_10106:0 "Mosul"
+ VICTORY_POINTS_2065:0 "Arak"
+ VICTORY_POINTS_7994:0 "Karbala"
+ VICTORY_POINTS_8001:0 "Najaf"
+ VICTORY_POINTS_3996:0 "Giza"
+ VICTORY_POINTS_12049:0 "Port Said"
+ VICTORY_POINTS_1068:0 "Beni Suef"
+ VICTORY_POINTS_4161:0 "El-Arīsh"
+ VICTORY_POINTS_10099:0 "Sharm el-Sheikh"
+ VICTORY_POINTS_11984:0 "Nicosia"
+ VICTORY_POINTS_7211:0 "Patras"
