SERBIA SERBIA SERBIA I LOVE SERBIA
fixing

--- a/localisation/english/alerts_l_english.yml
+++ b/localisation/english/alerts_l_english.yml
@@ -2,7 +2,7 @@
  ALERT_RIGHTCLICK:0 "§GRight-click to dismiss§!"
  ALERT_RIGHTCLICK_REPORT:0 "§GRight-click to dismiss§!. This will also dismiss all unread on-map reports of this type."
  alert_hostile_troops_instant:0 "§RHostile Troop§!"
- alert_hostile_troops_delayed:1 "There are hostile troops present in the garrisoned area."
+ alert_hostile_troops_delayed:2 "There are hostile troops present in the defended area."
  alert_naval_invasion_instant:0 "§RNaval Invasion§!"
  alert_naval_invasion_delayed:0 "§TThere are enemy naval invasions targeting these states:§!"
  alert_naval_invasion_delayed_state:0 "$STATE|H$"
@@ -18,7 +18,7 @@
  alert_base_low_supply_delayed:0 "Supply in this area is not enough and this is impacting Naval and Air bases. Any missions run from them will be less efficient."
  alert_base_very_low_supply_instant:0 "§RBases in Very Low Supply§!"
  alert_base_very_low_supply_delayed:0 "Supply in this area is not enough and this is impacting Naval and Air bases. Any missions run from them will be less efficient."
- LOW_SUPPLIES_TIPS:0 "§GTo improve the situation you can do one of the following:\n - Spread out or move your units away to reduce the local consumption.\n - Build higher level infrastructure and make sure there are no bottlenecks from the capital.\nIf delivered by sea, also:\n - Build higher naval base levels in source and destination provinces.\n - Make sure you have built enough convoys.\n - Make sure you escort convoys with 'Convoy escort' naval mission along the route. The delivery efficiency may drop when enemies often sink your convoys.§!"
+ LOW_SUPPLIES_TIPS:1 "The following actions may help you resolve the situation:\n - Spread out or reassign your units to reduce local consumption.\n - Build higher level infrastructure and make sure there are no railway bottlenecks from the capital.\n - If you have enough trucks, you can motorize hubs in the region, giving them increased supply cap and range.\nIf supply in the area is being delivered by sea, you can also:\n - Upgrade the level of naval bases in source and destination provinces.\n - Make sure you have built enough convoys.\n - Make sure you escort convoys with 'Convoy escort' naval mission along the route. The delivery efficiency may drop if convoys are sunk."
  alert_no_research_instant:0 "§YResearch Slot Available§!"
  alert_no_research_delayed:0 "You have $COUNT|Y$ Research Slot(s) available."
  alert_no_goal_instant:0 "§HNo Active Goal§!"
@@ -33,8 +33,9 @@
  alert_non_payed_license_delayed:0 "There are countries not lending civilian factories for licensed production:\n$LIST$§GRight-click to dismiss§!"
  alert_decision_new_instant:0 "§HDecisions Available§!"
  alert_decision_new_delayed:0 "Next decisions are ready to be taken:\n$LIST$§GRight-click to dismiss§!"
+ alert_decision_new_delayed_more:0 "...and $COUNT|H$ more."
  alert_decision_timeout_instant:0 "§HEvents or Decisions Timeout§!"
- alert_decision_timeout_delayed:0 "Next events and decisions are about to timeout:\n$LIST$§GRight-click to dismiss§!"
+ alert_decision_timeout_delayed:1 "These events or decisions are about to time out:\n$LIST$§GRight-click to dismiss§!"
  TIMEOUT_ITEM_LOC:0 "$NAME|H$ ($DAYS|H0$ §Hdays left§!)"
  alert_free_civilian_factories_instant:0 "§HFree Civilian Factories§!"
  alert_free_civilian_factories_delayed:0 "§TYou have free Civilian Factories to use for trade and building constructions.§!"
@@ -55,10 +56,12 @@
  ALERT_TRADE_IMPORT_DELAYED_ITEM:0 "$RESOURCE|H$ from $COUNTRY|H$ ($AVAILABLE|R$/$REQUESTED$)"
  ALERT_DIVISION_NO_EQUIPMENT_INSTANT:0 "§HMissing Equipment Production§!"
  ALERT_DIVISION_NO_EQUIPMENT_DELAYED:0 "§TYou have logistics requests that require Equipment which is currently not being produced.§!"
+ ALERT_DIVISION_NO_EQUIPMENT_FROM_GARRISON_REINFORCEMENT:0 "§TEquipment required for Garrison Reinforcements:§!"
  ALERT_DIVISION_NO_EQUIPMENT_FROM_ARMY_REINFORCEMENT:0 "§TEquipment required for Division Reinforcements:§!"
  ALERT_DIVISION_NO_EQUIPMENT_FROM_AIR_REINFORCEMENT:0 "§TEquipment required for Air Reinforcements:§!"
  ALERT_DIVISION_NO_EQUIPMENT_DEPLOYMENT:0 "§TEquipment required for queued Divisions:§!"
  ALERT_DIVISION_NO_EQUIPMENT:0 "§T$NAME|H$§!"
+ ALERT_DIVISION_NO_EQUIPMENT_NICHED:1 "$NAME|H$ $NICHE$"
  ALERT_AVAILABLE_WARGOAL:0 "§T$TARGET$: $WARGOAL$ ($DESC$)§!"
  ALERT_AVAILABLE_WARGOAL_EXPIRE:0 "§TExpires: $DATE|Y$§!"
  ALERT_ENEMY_GENERATE_WARGOAL:0 "$COUNTRY|Y$ is justifying against §Yus§!."
@@ -127,9 +130,15 @@
  alert_paused_diplomatic_actions_instant:0 "§HDiplomatic actions can't progress§!"
  alert_paused_diplomatic_actions_delayed:0 "Some of your diplomatic actions can't progress because you lack Political Power.\nConsider canceling these actions so they don't affect your Political Power gain.\n\nAffected relations:\n$COUNTRIES$"
  alert_resistance_instant:0 "§HResistance to occupation!§!"
- alert_resistance_delayed:0 "High levels of resistance in:\n$LIST|H$"
+ alert_resistance_delayed_high_resistance_list:0 "§HHigh levels of resistance in:§!"
+ alert_resistance_delayed_countries:0 "§HCountries:§!"
+ alert_resistance_delayed_states:0 "§HStates:§!"
  alert_outdated_equipment_instant:0 "§HOutdated equipment in production§!"
  alert_outdated_equipment_delayed:0 "We are producing the following outdated equipment:\n$LIST|H$"
+ ACTIVE_MODIFIER_ALERT_ENTRY_HEADER:0 "$NAME|H$ is active on:"
+ ACTIVE_MODIFIER_ALERT_ENTRY:0 "$NAME$"
+ NOT_ACTIVE_MODIFIER_ALERT_ENTRY_HEADER:0 "$NAME|H$ will be activated when resistance reaches $LIMIT|R.0%%$:"
+ NON_ACTIVE_MODIFIER_ALERT_ENTRY:0 "$NAME$ ($RESISTANCE|R.0%%$)"
  victory_color:0 "§G(Victory)§!"
  defeat_color:0 "§R(Defeat)§!"
  alert_not_training_divisions_instant:0 "§HNo Divisions in basic training§!"
@@ -167,11 +176,23 @@
  ALERT_PRIORITY_NORMAL:0 "Normal"
  ALERT_PRIORITY_HIGH:0 "§GHigh§!"
  ALERT_PRIORITY_DETAILS:0 "Fleets on high alert priority will report their alerts along with other global alerts."
- 
  ALERT_RIGHTCLICK_DISMISS_CURRENT_SPOTTERS:0 "§GRight-click to dismiss current spottings§!"
  ALERT_LEFTCLICK_TOGGLE_SPOTTER:0 "§GLeft-click to toggle between spottings§!"
  ALERT_SPOTTER_INFO:0 "There are $NUM|H$ new spottings in the regions by the fleets that are marked as important."
  ALERT_SPOTTER_INFO_REGION:0 "There are $NUM|H$ new spottings in this region."
- 
-
-CENTRALIZATION_ALERT_TOOLTIP:0 "§YCentralization is low§!"
+ ALERT_NO_CRYPTO_IS_BEING_DECRYPTED_TOOLTIP:0 "§RNo enemy cipher is being decrypted.§!"
+ ALERT_NO_CRYPTO_IS_BEING_DECRYPTED_TOOLTIP_DELAYED:0 "§GLeft-click§! to open cryptology window."
+ ALERT_ENEMY_CRYPTO_IS_BROKEN_TOOLTIP:0 "You have succesfully decrypted the cipher of following countries:"
+ ALERT_ENEMY_CRYPTO_IS_BROKEN_TOOLTIP_DELAYED:0 "§GLeft-click§! to open cryptology window."
+ alert_not_enough_garrison_instant:0 "§HNot enough Manpower or Equipment to fulfill our Garrisons§!"
+ alert_not_enough_garrison_warning:0 "§RSome Occupation Laws will not have their full effect until their Garrison needs are fully satisfied.§!"
+ alert_not_enough_garrison_delayed:0 "We are missing $NUM|*H$ Manpower."
+ alert_not_enough_garrison_delayed_equipment:0 "We are missing the following Equipment:"
+ ALERT_LOSING_TRAINS:0 "Losing Trains to enemy Logistics Air Strikes!"
+ ALERT_OPERATIVE_READY_TO_RECRUIT_INSTANT:0 "An operative can be recruited"
+ ALERT_OPERATIVE_READY_TO_RECRUIT_DELAYED:0 "§GClick§! to open the recruitment window"
+ alert_doctrine_unlock_instant:0 "§YDoctrines available§!"
+ alert_doctrine_unlock_delayed:0 "You can unlock a new: \n$DOCTRINE$"
+ alert_officer_corps_instant:0 "§YModify Officer Corps§!"
+ alert_officer_corps_spirit_delayed:0 "Military Spirits:\nYou can select a:\n$SPIRIT|Y$"
+ alert_officer_corps_advisor_delayed:0 "Advisors:\nYou can select a:\n$ADVISOR|Y$\n"
