--- a/localisation/english/frontend_l_english.yml
+++ b/localisation/english/frontend_l_english.yml
@@ -42,6 +42,7 @@
  MATCHMAKING_SERVER_BADVERSION:0 "The host has another version of the game"
  MATCHMAKING_SERVER_HOTJOIN_DECLINED:0 "Server has declined the join request"
  MATCHMAKING_SERVER_NAME_TAKEN:0 "Your name is already taken."
+ MATCHMAKING_SERVER_NAME_INVALID:0 "Your name is invalid."
  MATCHMAKING_SORT_BY_PASSWORD:0 "Sort by Password"
  SORT_BY_NAME:0 "Sort by Name"
  MATCHMAKING_SORT_BY_MOD:0 "Sort by MOD"
@@ -123,25 +124,39 @@
  FE_NO:0 "No"
  YES:0 "Yes"
  NO:0 "No"
- FE_DIFFICULTY_CUSTOM:0 "Custom Settings"
- FE_DIFFICULTY_CUSTOM_BTN:0 "Custom"
+ FE_DIFFICULTY_CUSTOM:1 "Configure custom game rules."
+ FE_DIFFICULTY_CUSTOM_BTN:1 "Custom Game Rules"
  FE_DIFFICULTY:0 "Difficulty"
  FE_DIFFICULTY_VERY_EASY:0 "Civilian"
- FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L" We must be very careful not to assign to this deliverance the attributes of a victory. Wars are not won by evacuations. "§!"
+ FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L"We Can Do It!"§!"
  FE_DIFFICULTY_EASY:1 "Recruit"
- FE_DIFFICULTY_EASY_TOOLTIP:0 "§L" The eyes of the world are upon you. The hopes and prayers of liberty-loving people everywhere march with you. "§!"
+ FE_DIFFICULTY_EASY_TOOLTIP:0 "§L"I have full confidence in your courage, devotion to duty, and skill in battle. We will accept nothing less than full victory. Good Luck!"§!"
  FE_DIFFICULTY_NORMAL:1 "Regular"
- FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L" Send all the world the message! England Lives, and marches on! "§!"
- FE_DIFFICULTY_HARD:1 "Hard"
- FE_DIFFICULTY_HARD_TOOLTIP:1 "§L" They sowed the wind, and now they are going to reap the whirlwind. '"§!"
- FE_DIFFICULTY_VERY_HARD:0 "Very Hard"
- FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L" Boys, if you ever pray, pray for me now. "§!"
+ FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L"For the enemy is strong. He may hurl back our forces. Success may not come with rushing speed, but we shall return again and again."§!"
+ FE_DIFFICULTY_HARD:1 "Veteran"
+ FE_DIFFICULTY_HARD_TOOLTIP:1 "§L"Thirty years from now when you're sitting by your fireside with your grandson on your knee and he asks, 'What did you do in the great World War Two?' you won't have to cough and say, 'Well, your granddaddy shoveled shit in Louisiana.'"§!"
+ FE_DIFFICULTY_VERY_HARD:0 "Elite"
+ FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L"I have nothing to offer but blood, toil, tears, and sweat."§!"
  FE_DIFFICULTY_UNKNOWN:0 "Secret Difficulty"
  FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP:0 "\n\nPlayer:\n$PLAYERMOD$"
  FE_DIFFICULTY_MODIFIER_AI_TOOLTIP:0 "\n\nAI:\n$AIMOD$"
  FE_IRONMAN_MP_BLOCKED:0 "§RIronman mode cannot be played in multiplayer.§!"
  FE_CUSTOM_DIFFICULTY_TOOLTIP:0 "Applied to: $COUNTRIES$\n$MODIFIER$"
  FE_RESET:0 "Reset All"
+ CUSTOM_GAME_RULES_TITLE:0 "Custom Game Rules"
+ CUSTOM_GAME_RULE_OPTION_DISALLOWS_ACHIEVEMENTS:0 "§RDoes not allow achievements.§!"
+ CUSTOM_GAME_RULES_ALLOW_ACHIEVEMENTS:0 "All game rules allow achievements."
+ CUSTOM_DIFFICULTY_GROUP_NAME:0 "Major Nation Buffs"
+ CUSTOM_GAME_SETTINGS_LOAD:1 "Load Preset"
+ CUSTOM_GAME_SETTINGS_LOAD_TOOLTIP:0 "Load a previously saved set of customized game rules."
+ CUSTOM_GAME_SETTINGS_SAVE:1 "Save Preset"
+ CUSTOM_GAME_SETTINGS_SAVE_TOOLTIP:0 "Save this set of customized game rules for future use when starting new games."
+ CUSTOM_GAME_SETTINGS_GROUP_CUSTOMIZED_TOOLTIP:0 "§HCustomized Options§!\nSome rules in this group are customized with non-default options."
+ CUSTOM_GAME_SETTINGS_GROUP_CUSTOMIZED_TOOLTIP_DELAYED:0 "§GClick§! to reset the whole group back to default."
+ CUSTOM_GAME_SETTINGS_GROUP_DEFAULT_TOOLTIP:0 "§HDefault Options§!\nEvery rule in this group is set to use its default option."
+ CUSTOM_GAME_SETTINGS_REVERT:1 "Reset"
+ CUSTOM_GAME_SETTINGS_REVERT_TOOLTIP:0 "Reset all customized rules back to their default options."
+ CUSTOM_GAME_SETTINGS_BACK:0 "Back"
  DAILY:0 "Daily"
  WEEKLY:0 "Weekly"
  GAMESETUP_SELECT_SCENARIO:0 "Select a Scenario or Load a game"
@@ -151,9 +166,12 @@
  CHAT_ERROR_UNKNOWNUSER:0 "Unknown User."
  FE_CHANGE_SCENARIO_ONLY_SERVER:0 "§RMay only be changed by the host§!"
  ACHIEVEMENTS_CHEATS:0 "No cheats or modified game/save"
+ ACHIEVEMENTS_LOGGED_IN_PARADOX:0 "Logged in with Paradox account"
+ ACHIEVEMENTS_LOGGED_IN_MICROSOFT:0 "Logged in with Microsoft account"
  ACHIEVEMENTS_DIFFICULTY:0 "Regular or higher difficulty"
  ACHIEVEMENTS_OK:0 "§HCan get Achievements!§!"
- ACHIEVEMENTS_NOT_OK:0 "§RCan not currently get Achievements.§!"
+ ACHIEVEMENTS_NOT_OK:1 "§RCannot get Achievements.§!"
+ ACHIEVEMENTS_MOSTLY_NOT_OK:0 "§RCannot get most Achievements.§!"
  diff_strong_ai_generic:0 "Stronger AI"
  custom_diff_strong_ger:0 "Strengthen Germany"
  custom_diff_strong_ita:0 "Strengthen Italy"
@@ -184,3 +202,8 @@
  ROM_lost_starting_state:0 "Romania lost one of its starting states"
  YUG_delcared_war_on_axis_allies:0 "Declared war on Axis or Allies while in either Axis or Allies"
  achievement_carol_II_is_leader:0 "§YCarol II§! is the current country leader"
+ CHAT_ERROR_MUTE_MISSINGARGS:0 "Invalid syntax, expected: /mute <username>"
+ CHAT_ERROR_UNMUTE_MISSINGARGS:0 "Invalid syntax, expected: /unmute <username>"
+ CHAT_ERROR_MUTEUNMUTE_SELF:0 "You cannot mute or unmute yourself!"
+ CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_SINGULAR:0 "You have been posting too frequently. Please wait for §Y1§! second before posting again."
+ CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_PLURAL:0 "You have been posting too frequently. Please wait for $TIME|Y$ seconds before posting again."
