Tweaked Brazilian state loc + added new victory points
Also adjusted Equatorial-Bahiense state border by 1 province

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -298,7 +298,7 @@
  STATE_297:0 "Gobi"
  STATE_298:0 "Cabo Mesurado"
  STATE_299:0 "Falkland Islands"
- STATE_300:0 "Cisplatina"
+ STATE_300:0 "Uruguay"
  STATE_301:0 "Paraguay"
  STATE_302:0 "La Paz"
  STATE_303:0 "Lima"
@@ -493,17 +493,17 @@
  STATE_492:0 "Arequipa"
  STATE_493:0 "La Libertad"
  STATE_494:0 "Ucayali"
- STATE_495:0 "Amazonas"
- STATE_496:0 "Para"
+ STATE_495:0 "Grao-Para"
+ STATE_496:0 "Diamantina"
  STATE_497:0 "Maranhao"
- STATE_498:0 "Rio Grande"
+ STATE_498:0 "Nordeste"
  STATE_499:0 "Bahia"
  STATE_500:0 "Rio de Julho"
  STATE_501:0 "Elias da Silva"
- STATE_502:0 "Rio Grande Sul"
- STATE_503:0 "Pombo"
+ STATE_502:0 "Rio Grande do Sul"
+ STATE_503:0 "Santa Catarina"
  STATE_504:0 "Iguacu"
- STATE_505:0 "Goias"
+ STATE_505:0 "Sao Francisco"
  STATE_506:0 "Antofagasta"
  STATE_507:0 "Magallanes"
  STATE_508:0 "Tucuman"
@@ -828,7 +828,7 @@
  STATE_827:0 "Acre"
  STATE_828:0 "Acrean Amazonas"
  STATE_829:0 "Granadan Amazonas"
- STATE_830:0 "Goias do Sul"
+ STATE_830:0 "Goias"
  STATE_831:0 "Nice"
  STATE_832:0 "Upper Savoy"
  STATE_833:0 "Southern Abruzzo"
