Testing of Characters + Germany Work

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1222,6 +1222,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   PB_GER_BROWN_POLITICS:0 "§LDeutscher Volksbund§! has won the 1933 Elections"
 
   french_austra_tension:0 "Rising Tensions in the §YRepublic of Australie§!"
+
+  GER_Vienna_Capital:0 "§GThe Capital of the New Germany will rightfully be Vienna!§!"
   
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
   GER_PB_Tooltip_Costs:0 "The Decision Cost, to reduce Unrest in the Volksstaaten, will be §Greduced and made all the same.§!"
@@ -1299,13 +1301,13 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
  GER_Empire_ds:0 "German Reich"
  GER_Empire_ds_DEF:0 "German Reich"
  GER_Empire_rc:0 "German Reich"
- GER_Empire_rc_DEF:0 "the German Reich"
+ GER_Empire_rc_DEF:0 "The German Reich"
  GER_Empire_an:0 "German Reich"
  GER_Empire_an_DEF:0 "German Reich"
  GER_Empire_cn:0 "German Reich"
  GER_Empire_cn_DEF:0 "German Reich"
  GER_Empire_lb:0 "German Reich"
- GER_Empire_lb_DEF:0 "the German Reich"
+ GER_Empire_lb_DEF:0 "The German Reich"
  GER_Empire_ss:0 "German Reich"
  GER_Empire_ss_DEF:0 "German Reich"
  GER_Empire_jc:0 "German Reich"
