--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -7,3 +7,18 @@
   PB_Pers_Ambitious:0 "Ambitious"
 
   PB_Pers_Diligent:0 "Diligent"
+
+  augmented:0 "Augmented"
+  augmented_desc:0 "This general has been biomechanically enhanced, either as a medical necessity or to improve combat performance. While this improves aspects of physical and mental performance, human augmentation is not an exact science and users require regular genetic therapy to prevent Acute Bodily Rejection Syndrome and septic illness."
+  razormaiden:0 "Razormaiden"
+  shellshocked:0 "Shellshocked"
+  shellshocked_desc:0 "This general suffers from Acute Battle Fatigue Syndrome, colloquially known as Shellshock or Combat Nerves.\n\nWhile this condition has always existed historically, the volume of cases caused during the Great War lead it to be officially recognized by the International Psychiatric Treatment Foundation in the IMCD-23. Official description and diagnosis has done little to break down the social stigma of ABFS, and most refuse to acknowledge and treat symptoms outside extreme cases."
+  paranoid:0 "Paranoid"
+  paranoid_desc:0 "This general is completely unwilling to trust anyone but themselves, to the point of even disrupting operations to sate their delusions."
+  gene_addict:0 "Gene Therapy Addict"
+  Iberian_Front_Veteran:0 "Veteran of the Iberian Campaign"
+  Iberian_Front_Veteran_desc:0 "This general served with the British Expeditionary Force during the Iberian Campaign.\n\nNotable for being the first instance of combined arms combat during Operation Overlord, the Iberian Campaign was one of the most arduous frontlines of the entire Great War. Despite being outmatched by technologically superior Anglo-American forces, the Royal Spanish Army fought a bitter retreat across Asturias and the Basque Country before frontlines calcified along the Cantabrian Mountain range.\n\nThe Iberian Front would become a meat grinder as Anglo-American Forces pressed South in any available direction. While air support and overwhelming firepower helped to break Spanish fortifications, the Spanish often countered with chemical weapons and massed infantry assaults, demonstrating an almost comical disregard for the losses they suffered.\n\nMost infamously, the Iberian Campaign is remembered for the Battle of Valladolid, simultaneously a success for combined arms warfare and one of the worst atrocities in British military history. Desperate to hold the line, Spanish commanders refused to allow civilians to evacuate and in many cases even forced them to organize protective militias. Unaware of this, British commanders rained steel hell on the city, pummeling it with caustic chemical bombs and incendiary rounds.\n\nUltimately over half the city's pre-war population was killed, along with around 25,000 Spanish soldiers. As a result, the Iberian Campaign occupies a contradictory role in Britain's military history as both a triumph and an irremovable black mark against her military reputation."
+  egotist:0 "Egotistical"
+  egotist_desc:0 "This general holds a disproportionately high opinion of themselves, and will make sure anyone around them knows it, whether they want to or not."
+  questionable_methods:0 "Questionable Methods"
+  questionable_methods_desc:0 "This general is willing to use methods, tactics and equipment that would be considered ethically dubious at best and morally bankrupt at worst."
