--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -220,3 +220,8 @@
  jet_engines:0 "Intra-Sonic Uranium Engine"
  air_rotary_engine:0 "Rotary Blade Engine"
  jet_engines_desc:0 "Developed using cutting age science, Uranium Tele-Atomic Engines combine the kinetic thrust of a teleforce engine with the versatility of atomic power. With testing showing acceptable rates of cancer development in aeronauts, Tele-Atomic Engines will give a clear edge in aerial combat, while the warmth of nuclear power deters high altitude hypothermia"
+
+ mmhorrors_folder:0 "Augments and Unorthodox Technologies"
+ mmhorrors_folder_desc:0 "§Y\"Why then cannot we cut one code short here, and start another there? Is life so fragile that it can withstand no tampering? Does the sacred brook no improvement?\"§!\n\nThe cutting edge of Biotechnics, Technosapianism and the unhinged sciences, ready for deployment against our unfortunate enemies."
+
+ combatagate_base:0 "Combatagate Primordial Forms"
