i will upload this stuff just in case

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1233,7 +1233,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   GER_Vienna_Capital:0 "§GThe Capital of the New Germany will rightfully be Vienna!§!"
   
-  PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
+  PB_GER_TT_Centralization:0 "The effects of §RUnrest§! in the Volksstaten will be §Greduced.§! "
   GER_PB_Tooltip_Costs:0 "The Decision Cost, to reduce Unrest in the Volksstaaten, will be §Greduced and made all the same.§!"
 
   GER_Invite_to_Hamburg:0 "£decision_icon_small Decisions will be §Yunlocked§! to invite European Nations to the Hamburg League\n§ROur Fight against Tryranny begins here!§!"
