--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -111,7 +111,10 @@
  VICTORY_POINTS_6923:0 "Plovdiv"
  VICTORY_POINTS_9783:0 "Varna"
  VICTORY_POINTS_9617:0 "Bucharest"
- VICTORY_POINTS_690:0 "Kronstadt"
+ VICTORY_POINTS_690:0 "Brasov"
+ VICTORY_POINTS_6706:0 "Galati"
+ VICTORY_POINTS_6652:0 "Craiova"
+ VICTORY_POINTS_687:0 "Tulcea"
  VICTORY_POINTS_3663:0 "Ploiesti"
  VICTORY_POINTS_6682:0 "Arad"
  VICTORY_POINTS_9606:0 "Temesvár"
