--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -1,5 +1,27 @@
 ﻿l_english:
 
+ submarine:0 "Submarine"
+ submarine_desc:0 "Submarines employ stealth and powerful torpedoes to destroy enemy convoys."
+ both_cruisers_desc:0 "Light Cruiser - A light screening vessel. Its primary duty is to shield capital ships from enemy light ships but can also unleash powerful torpedoes that can hurt bigger ships.\n\nHeavy Crusier - A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
+ light_cruiser:1 "Light Cruiser"
+ light_cruiser_desc:0 "A light screening vessel. Its primary duty is to shield capital ships from enemy light ships but can also unleash powerful torpedoes that can hurt bigger ships."
+ heavy_cruiser:1 "Heavy Cruiser"
+ heavy_cruiser_desc:0 "A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
+ destroyer:0 "Destroyer"
+ destroyer_desc:0 "The lightest screening vessel. Its job is to defend larger ships and to find and destroy submarines."
+ ship_hull_light:1 "Light Hull"
+ ship_hull_light_desc:0 "The lightest screening vessel. Its job is to defend larger ships and to find and destroy submarines."
+ carrier:0 "Carrier"
+ carrier_desc:0 "A capital ship able to carry wings of powerful carrier capable aircraft into battle. Also useful as a floating airfield you can position off the coast of your enemy."
+ battleship:0 "Battleship"
+ battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
+ battle_cruiser:0 "Battlecruiser"
+ battle_cruiser_desc:0 "A large capital ship often with offensive abilities close to those of a battleship, but with weaker armor traded for a faster speed."
+ convoy:0 "Convoy"
+ convoy_desc:0 "Convoys used for international trade of goods and resources. Also used to ferry troops around and for performing naval invasions."
+ sh_battleship:0 "Superheavy Battleship"
+ sh_battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
+
  gw_tank_equipment:0 "Great War Landship"
  gw_tank_equipment_short:0 "Great War Landship"
  gw_tank_equipment_desc:0 "Landships in World War I were developed separately and simultaneously by the United Kingdom and France as a means to break the deadlock of trench warfare on the Western Front. The name Landship was adopted by the British during the early stages of their development, as a security measure to conceal their purpose. Early landships were armed with machineguns and small cannons, moved slowly, and were armored only enough to stop small arms fire."
