Brit content push 1

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -694,6 +694,7 @@
   PB_ENG_Imperial_Debate_Completed_Anti_Imperialist_tooltip:0 "§YHas Chosen an Enlightened Imperialist Imperial Policy§!"
   PB_ENG_British_Revolution_tooltip:0 "§YThe Despotic Edwardian Regime as been overthrown§!"
   ENG_Dont_fucking_do_this:0 "§rGoing down this path may not be the best idea, and may have drastic unforseen consequences§!"
+  PB_ENG_britain_reform_tooltip:0 "§YThe process to reform the armed forces will now be finally kicked into action§!"
 
   PB_ENG_Nicaragua_Canal_Completion_Tooltip:0 "The Nicaraguan Canal is §Ycompleted§!"
   ENG_Nicaragua_Canal_Joint_tt:0 "§YUpon Completion of the Nicaragua Canal, the United Commonwealth will also receive a §!§Gpositive§!§Y National Spirit for Nicaragua Canal Dividends§!\n\n"
@@ -1476,6 +1477,10 @@
   britain.1040.d:0 "Pollitt calls gallacher a cringe ass nae nae baby"
   britain.1040.a:0 "Not particularly helpful"
 
+  britain.1041.t:0 "The Lion's Claws"
+  britain.1041.d:0 "Placeholder"
+  britain.1041.a:0 "Let's get started, shall we?"
+
   britain.2000.t:0 "Report from the Mandate"
   britain.2000.d:0 "A curious report has reached the office of Sir John French, Commissioner of the British Expeditionary Force in Palestine. The report, delivered by agents of the Imperial Security Service, contained a series of reports by Jordanian and Palestinian travelers that a white man traveling alone in the Jordanian desert has been spotted on multiple occasions. It went on to indicate a high probability that the man being referred to may be the missing British Colonel Thomas Edward Lawrence, though it cannot confirm this with absolute certainty.\n\nLawrence vanished from his posting in the Trucial States following the end of hostilities in the Great War. The reason for his disappearence is unknown, but colleagues attested to the ISS that his service during the North African campaign and the Arab Peacekeeping operations may have pushed him over the edge. Lawrence's fascination with the Middle East is well known, and ISS agents have been combing the Arab Kingdoms for almost two decades in an effort to locate him. If this lead is to be believed, Lawrence may have been hiding beneath our noses this entire time. Our ISS office in Jerusalem has advised that we dispatch an agent to Jordan to locate this unidentified man post haste, as we may lose our chance to find him with the brewing chaos in the Near East."
   britain.2000.a:0 "Dispatch an Agent to locate him."
@@ -1670,6 +1675,8 @@
   ##########################
   ImpConf_research_name:0 "Imperial Mutual Development Committee"
   ImpConf_research_desc:0 "Established in the aftermath of the Great War, the Imperial Mutual Development Committee is an organization within the Imperial Confederation that helps to standardize technological development within the Empire."
+
+  PB_ENG_army_reform_started_flag:0 "§YArmed forces reforms have been started.§!"
 
   ENG_lb_party_split:0 "Labour"
   ENG_lb_party_split_long:0 "Labour Party"
