A lot of minor stuff

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -79,6 +79,7 @@
  VICTORY_POINTS_3552:0 "Brest"
  VICTORY_POINTS_3594:0 "Vichy"
  VICTORY_POINTS_3652:0 "Dijon"
+ VICTORY_POINTS_5291:0 "Verdun"
  VICTORY_POINTS_3671:0 "Tours"
  VICTORY_POINTS_3768:0 "Grenoble"
  VICTORY_POINTS_6449:0 "Cherbourg"
