some quality of life and a new technology

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -226,3 +226,6 @@
 
  combatagate_1:0 "Combatagate Primordial Forms"
  combatagate_1_desc:0 "Created in the 1920s due to failed cattle yield experiments, Combatagates function as biological shock cavalry. The creatures are released on the enemy in a highly agitated state, and after between twelve to fourteen hours will die from organ failure via an imprinted biological timer, requiring little cleanup or need for extermination."
+
+ artillery6:0 "Proximity Fuze"
+ artillery6_desc:0 "The Proximity Fuze is a fuze that detonates an explosive devices automatically when the distance to the target becomes smaller then a predetermined value. It works for all kind of artillery or anti air shells and can be made used with rockets. Recent observations have shown that the lethality with this fuze increase by 5 to 10 times compared to the common contact fuze."
