--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -361,6 +361,19 @@
  amphibious_mechanized_equipment_2_short:0 "Improved Amtrac"
  amphibious_mechanized_equipment_2_desc:0 "These Amtracs feature several improvements over the base version, such as a rear loading ramp for easier unloading on the beach."
 
+ train_equipment:0 "Train"
+ train_equipment_desc:0 "Trains transport supplies from the Supply Capital to Supply Hubs connected by rail."
+ train_equipment_1:0 "Civilian Train"
+ train_equipment_1_desc:0 "Taken over by the military from regular civilian freight duty, this train engine is well-suited to move a large amount of supplies over long distances. However, its civilian construction makes it vulnerable."
+ train_equipment_2:0 "War Austerity Train"
+ train_equipment_2_desc:0 "A simplified design that ommits many features commonly found on regular freight trains for the sake of cheaper production. It is still every bit as vulnerable as a regular train, but can more easily be replaced."
+ train_equipment_3:0 "Armored Train"
+ train_equipment_3_desc:0 "A train engine encased in heavy armor to make it less vulnerable to enemy attack. It can carry as much cargo as any other design, but is more expensive to produce."
+ railway_gun_equipment:0 "Railway Artillery"
+ railway_gun_equipment_desc:0 "A heavy cannon mounted on a railway carriage for transportation."
+ railway_gun_desc:0 "Railways offer an opportunity to move heavy guns far inland at a reasonable speed, allowing us to bombard enemy position at great range and with good effect."
+ railway_gun_equipment_1:0 "Railway Gun"
+
 fighter_equipment_0:0 "Great War Fighter"
 cv_fighter_equipment_0:0 "Great War Carrier Fighter"
 fighter_equipment_1:0 "Interwar Fighter"
