--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -490,7 +490,7 @@
   PB_ENG_dominate_sky_desc:0 ""
   PB_ENG_better_superiority:0 "Persistent and Total Control"
   PB_ENG_better_superiority_desc:0 ""
-  PB_ENG_cheaper_fighters:0 "Exponentially Cheaper, Fundamentally Superior"
+  PB_ENG_cheaper_fighters:0 "Fundamentally Superior Aircraft"
   PB_ENG_cheaper_fighters_desc:0 ""
   PB_ENG_support_ground:0 "Support our Boys on the Ground!"
   PB_ENG_support_ground_desc:0 ""
@@ -514,7 +514,7 @@
   PB_ENG_carrier_desc:0 ""
   PB_ENG_better_sorting:0 "Advanced Sortie Techniques"
   PB_ENG_better_sorting_desc:0 ""
-  PB_ENG_cheaper_cfandcas:0 "More Expendable Carrier Aircraft"
+  PB_ENG_cheaper_cfandcas:0 "More Dependable Carrier Aircraft"
   PB_ENG_cheaper_cfandcas_desc:0 ""
   PB_ENG_naval_research_one:0 "Tried and True Methods"
   PB_ENG_naval_research_one_desc:0 ""
@@ -672,6 +672,14 @@
   ENG_National_Security_Act3:0 "The National Security Act"
   ENG_NPP_Imperial_Corporation_Backlash:0 "Wrath of the Imperial Corporations"
   ENG_Imperial_Pound:0 "The New Imperial Pound"
+  ENG_Soldier_Focus:0 "Lowered Recruiting Standards"
+  ENG_Armor_Focus:0 "Cutting Edge Armor Improvements"
+  ENG_New_Rifle:0 "The New Imperial Rifle"
+  ENG_New_Rifle_Artillery:0 "The New Imperial Army"
+  ENG_Master_Air:0 "Masters of the Air"
+  ENG_Master_Land:0 "Masters of the Land"  
+  ENG_Master_Sea:0 "Masters of the Sea"
+  ENG_Master_World:0 "Masters of the Earth"
 
   ENG_Commonwealth_Development_Funding:0 "Commonwealth Development Programme"
   ENG_Commonwealth_Research_Funding:0 "Commonwealth Research Assistance"
