--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -217,7 +217,7 @@
   PBNews.56.a:0 "War makes men go mad."
 
   PBNews.57.t:0 "RUSSIA SURRENDERS"
-  PBNews.57.d:0 ""
+  PBNews.57.d:0 "The Imperial Powers have stormed into Russia with fury, and through combined war efforts, effectively overthrown the Russian government. Dark days ahead for the russian populace as they are now subject to sporatic gureilla warfare between Russian partisans and Imperial Powers soldiers. British and German delegates have promised to protect the local populace and install a proper democratic government into Russia. International observers are hopeful that through joint Imperial Power occupation, Russia can achieve stability."
   PBNews.57.a:0 "Death To The Tyrants!"
 
   PBNews.58.t:0 "A Situation Made Worse"
@@ -248,11 +248,11 @@
   PBNews.64.d:0 "Russia and it's subjects have officially joined the Pacte Revanchiste. Ties between the nations have recently warmed up during the approaching weeks and it seems all previous Great War hostilities have seemed to be forgotten in light of a new age of friendship and cooperation.\n\nThe truth quite simply is that Russia needed a nation to aid them in their eventual showdown with Britian and Germany and who better than the resurgent French who to seem to be on a similar warpath with Russia's rivals. Both Germany and Britian have refused to comment on the matter."
   PBNews.64.a:0 "Everyday They Get Stronger"
 
-  PBNews.65.t:0 "The Moscow Riots"
+  PBNews.65.t:0 "The Moscow Riots" #old
   PBNews.65.d:0 ""
   PBNews.65.a:0 "Russia Continues To Burn"
 
-  PBNews.66.t:0 "The Red Revolution"
+  PBNews.66.t:0 "The Red Revolution" #old
   PBNews.66.d:0 ""
   PBNews.66.a:0 "Dear Lord"
 
@@ -260,7 +260,7 @@
   PBNews.67.d:0 "The Indian Transitional Congress known simply as the Transitional Congress was just established hours ago, proclaiming a new era of Indian democracy, and history. The ruling familiy dynasty still maintains power though what actually constitutes as power is very limited and their role seems to just be reduced to little more than figure heads for the true government. Though rumors have speculated that the system is corrupt and bloated and a simple flick would collapse the entire system. These rumours are based of the numerous reports of PILM terrorist attacks that have so far produced what some would call radical results."
   PBNews.67.a:0 "Will It Work Though?"
 
-  PBNews.68.t:0 "The Black Sun"
+  PBNews.68.t:0 "The Black Sun" 
   PBNews.68.d:0 ""
   PBNews.68.a:0 "Dear Lord"
 
@@ -280,7 +280,7 @@
   PBNews.74.d:0 "The unthinkable has happened. The Prussian state, once considered to be nothing more than a clique of Germanic militant fanatics, has managed to crush their oldest and gravest rival, the Germans, and has proclaimed Greater Prussia in its place. Ambitions which had once made Prussia nothing more than a laughingstock have now been realized, and the world awaits with bated breath to see what will happen next."
   PBNews.74.a:0 "The Young Have Replaced The Old"
 
-  PBNews.75.t:0 "BOUHLER COMMITS SUICIDE"
+  PBNews.75.t:0 "BOUHLER COMMITS SUICIDE" #old
   PBNews.75.d:0 ""
   PBNews.75.a:0 "Dear Lord"
 
