Small Content Update

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1310,9 +1310,20 @@
   britain.96.d:0 "PLACEHOLDER Orman invokes the recently passed National Security Act in light of the war on the continent. Effectively now dictator of Britain, Orman can now enforce the full extent of the radical NPP agenda on Britain. British democracy, should it ever truly return, is mortally damaged."
   britain.96.a:0 "Would you like to see Britannia Rule again my friend?"
 
-  britain.97.t:0 "The New Economic Policy"
-  britain.97.d:0 "PLACEHOLDER Orman announces the intention to transition Britain from a state capitalist managed economy to a new National Syndicalist economy, shifting away from private enterprise and greatly expanding the involvement of the state in economic matters. The Imperial Corporations will be nationalized and fully controlled by the new British Labour Committee and Unions will be state controlled."
-  britain.97.a:0 "The future of Britain awaits."
+  britain.97.t:0 "The Formosan Problem"
+  britain.97.d:0 "Our control of what the natives call Formosa is increasingly growing to be a problem. Most experts in our empire agree that for the sake of stability, we really should give them some kind of local government. Some leaders in our far eastern holdings have suggested incorporating Taiwan into their existing government. Alternatively we could keep directly ruling the land even if it not worthwhile."
+  britain.97.a:0 "Transfer Taiwan to the Far East Administration."
+  britain.97.b:0 "Reorganize Taiwan's administration."
+  britain.97.c:0 "Direct control from London."
+
+  britain.98.t:0 "Hawaii In The Imperial Powers?"
+  britain.98.d:0 "The British have proposed us a alliance between our two powers, the economic and military advantages from this would be immense but our goverrnment is unsure if we should abandon neutrality."
+  britain.98.a:0 "God Save The Queen!"
+  britain.98.b:0 "The prefidious British need to stay out of our way..."
+
+  britain.99.t:0 "The Treaty of Ryukyu"
+  britain.99.d:0 "We have decided that to woo the Japanese state, we must send a sign of good faith, to do this we've met with top Japanese officials in Ryuku. A return of ryukyu and a mutual guarantee. "
+  britain.99.a:0 "The east and the west united at last?"
 
   britain.1000.t:0 "Choosing the Next Prime Minister"
   britain.1000.d:0 ""
