Germany Work and A Little Swiss Suprise

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -447,7 +447,7 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Intelligence_Agency_Enigma:0 "ENIGMA Programme"
   PB_GER_Intelligence_Agency_Nuclear_Tech:0 "Einstein-Braun Proposal"
 
-  PB_GER_German_Diplomacy:0 "Germany's Place in the World"
+  PB_GER_German_Diplomacy:0 "Reassuring the Anglo-Saxon Friendship"
 
   PB_GER_Red_Diplomacy:0 "Everything for a Peaceful Europe"
   PB_GER_Improve_Spy_Network:0 "Spies in all of Europe"
