--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -367,6 +367,8 @@
  VICTORY_POINTS_12154:0 "Madang"
  VICTORY_POINTS_12315:0 "Manokwari"
  VICTORY_POINTS_7859:0 "Canberre"
+ VICTORY_POINTS_9638:0 "Basel"
+ VICTORY_POINTS_6666:0 "Geneva"
  VICTORY_POINTS_7798:0 "Dutigalle"
  VICTORY_POINTS_12406:0 "Sydney"
  VICTORY_POINTS_1652:0 "Boltsholm"
